New Sidebar Variable

--- a/sass/aura/_variables.scss
+++ b/sass/aura/_variables.scss
@@ -7,6 +7,7 @@ $total-cols:            12                          !default;
 $main-content-cols:     9                           !default;
 $font-scale:            true                        !default;
 $obj-scale:             true                        !default;
+$sidebars:              1, 'right'                  !default;
 // Advanced Options
 $gutter-to-col:         1, 4                        !default;
 $alphabet-count:        26                          !default;
