Now requires Sassy Math.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 //////////////////////////////
 // Aura Import
 //////////////////////////////
+@import 'math';
 @import 'aura';
 
 //////////////////////////////
