--- a/compass/stylesheets/aura/_mixins.scss
+++ b/compass/stylesheets/aura/_mixins.scss
@@ -29,6 +29,67 @@
   @else {
     $measure: $measure-width;
   }
+  
+  // Set up sidebars now as sidebars can affect $total-cols
+  %primary-sidebar {
+    @include columns(sidebar-width());
+
+    @if nth($sidebars, 2) == 'left' or nth($sidebars, 2) == 'both'{
+      float: none;
+      @include respond-to('small') {
+        @include alpha();
+        float: left;
+      }
+    }
+    @else if nth($sidebars, 2) == 'right' {
+      float: none;
+      @include respond-to('small') {
+        float: right;
+        @if nth($sidebars, 1) == 1 {
+          margin-left: 0;
+          margin-right: gutter();
+        }
+      }
+    }
+    @else if nth($sidebars, 2) == 'none' {
+      float: none;
+      @include respond-to('small') {
+        float: right;
+      }
+    }
+    @else {
+      @warn 'Sidebar side can only have a value of left, right, both, or none';
+    }
+  }
+  
+  %secondary-sidebar {
+    @include columns(sidebar-width($overflow: false));
+
+    @if nth($sidebars, 2) == 'left' {
+      float: none;
+      @include respond-to('small') {
+        float: left;
+      }
+    }
+    @else if nth($sidebars, 2) == 'right' or nth($sidebars, 2) == 'both' {
+      float: none;
+      @include respond-to('small') {
+        float: right;
+        margin-left: 0;
+        margin-right: gutter();
+      }
+    }
+    @else if nth($sidebars, 2) == 'none' {
+      float: none;
+      @include respond-to('small') {
+        float: right;
+      }
+    }
+    @else {
+      @warn 'Sidebar side can only have a value of left, right, both, or none';
+    }
+  }
+  
   // Set UP Grid
   // If there's a width, figure out body-font-size for width
   @if $width {
@@ -87,6 +148,36 @@
     @include full;
     @include respond-to('small') {
       @include columns($main-content-cols);
+    }
+    @if nth($sidebars, 2) == 'left' or nth($sidebars, 2) == 'both'{
+      float: none;
+      @include respond-to('small') {
+        float: right;
+      }
+    }
+    @else if nth($sidebars, 2) == 'right' {
+      float: none;
+      @include respond-to('small') {
+        @include alpha();
+        float: left;
+      }
+    }
+    @else if nth($sidebars, 2) == 'none' {
+      float: none;
+      @include respond-to('small') {
+        @include alpha();
+        float: left;
+      }
+    }
+    // Add in "Omega"
+    @if nth($sidebars, 2) == 'left' {
+      @include respond-to('small') {
+        margin-left: 0;
+        margin-right: gutter();
+      }
+    }
+    @else {
+      @warn 'Sidebar side can only have a value of left, right, both, or none';
     }
   }
   
