Math needs to be imported in _aura

--- a/sass/_aura.scss
+++ b/sass/_aura.scss
@@ -3,6 +3,7 @@
 //////////////////////////////
 @import 'susy';
 @import 'modular-scale';
+@import 'math';
 
 //////////////////////////////
 // Aurora Variables, Functions, Mixins
