--- a/compass/stylesheets/_aura.scss
+++ b/compass/stylesheets/_aura.scss
@@ -3,6 +3,7 @@
 //////////////////////////////
 @import 'susy';
 @import 'modular-scale';
+@import 'math';
 
 //////////////////////////////
 // Aurora Variables, Functions, Mixins
