--- a/compass/stylesheets/aura/_mixins.scss
+++ b/compass/stylesheets/aura/_mixins.scss
@@ -18,7 +18,7 @@
       $responsive-ratio: $major-third;
     }
     @else {
-      $responsive-ratio: $golden;
+      $responsive-ratio: $golden-ratio;
     }
   }
   
