--- a/sass/aura/_variables.scss
+++ b/sass/aura/_variables.scss
@@ -8,6 +8,7 @@ $main-content-cols:     9                           !default;
 $font-scale:            true                        !default;
 $obj-scale:             true                        !default;
 $sidebars:              1, 'right'                  !default;
+$single-column:         true                        !default;
 // Advanced Options
 $gutter-to-col:         1, 4                        !default;
 $alphabet-count:        26                          !default;
