--- a/sass/style-2.scss
+++ b/sass/style-2.scss
@@ -8,7 +8,8 @@
 //////////////////////////////
 $body-font-size: 18px;
 //$font-scale: false;
-$sidebars: 2, 'both', 3, 2;
+$sidebars: 2, 'both', 4, 2;
+$single-column: true;
 
 $width: 960px;
 
