--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,39 @@
 @charset "UTF-8";
-/* line 34, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
+/* line 34, ../sass/aura/_mixins.scss */
 #sidebar {
   display: inline;
   float: left;
-  width: 22.951%;
-  margin-right: 1.639%;
+  width: 100%;
+  margin-right: 1.695%;
   float: none;
 }
-@media screen and (min-width: 31.232em) {
-  /* line 34, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  #sidebar {
-    margin-left: 1.639%;
-    float: left;
-  }
-}
 
-@media screen and (min-width: 31.232em) {
-}
-
-/* line 112, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
+/* line 136, ../sass/aura/_mixins.scss */
 html {
   font-size: 0.72em;
   line-height: 1.36em;
 }
-@media screen and (min-width: 31.232em) {
-  /* line 112, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  html {
-    font-size: 0.9em;
-    line-height: 1.45em;
-  }
-}
-@media screen and (min-width: 39.04em) {
-  /* line 112, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  html {
-    font-size: 1.125em;
-    line-height: 1.563em;
-  }
-}
-@media screen and (min-width: 48.8em) {
-  /* line 112, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  html {
-    font-size: 1.406em;
-    line-height: 1.703em;
-  }
-}
-@media screen and (min-width: 61em) {
-  /* line 112, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  html {
-    font-size: 1.758em;
-    line-height: 1.879em;
-  }
-}
 
-/* line 141, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
+/* line 168, ../sass/aura/_mixins.scss */
 img, object, embed, iframe, video, audio {
   max-width: 100%;
 }
 
-/* line 147, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
+/* line 174, ../sass/aura/_mixins.scss */
 #main-content {
   clear: both;
   margin-left: 1.639%;
   margin-right: 1.639%;
-  float: none;
-}
-@media screen and (min-width: 31.232em) {
-  /* line 147, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  #main-content {
-    display: inline;
-    float: left;
-    width: 72.131%;
-    margin-right: 1.639%;
-  }
-}
-@media screen and (min-width: 31.232em) {
-  /* line 147, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  #main-content {
-    float: right;
-  }
-}
-@media screen and (min-width: 31.232em) {
-  /* line 147, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
-  #main-content {
-    margin-left: 0;
-    margin-right: 1.639%;
-  }
 }
 
-/* line 184, /Users/Valhalla/Development/Aura/sass/aura/_mixins.scss */
+/* line 225, ../sass/aura/_mixins.scss */
 #page-wrapper {
   *zoom: 1;
   margin: auto;
   width: 64.615em;
   max-width: 100%;
 }
-/* line 38, /Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 #page-wrapper:after {
   content: "";
   display: table;
@@ -119,25 +58,25 @@ img, object, embed, iframe, video, audio {
   color: white;
   background-color: red;
 }
-@media screen and (min-width: 31.232em) {
+@media screen and (min-width: 27.068em) {
   /* line 27, ../sass/style.scss */
   #main-content {
     background-color: orange;
   }
 }
-@media screen and (min-width: 39.04em) {
+@media screen and (min-width: 33.835em) {
   /* line 27, ../sass/style.scss */
   #main-content {
     background-color: green;
   }
 }
-@media screen and (min-width: 48.8em) {
+@media screen and (min-width: 42.293em) {
   /* line 27, ../sass/style.scss */
   #main-content {
     background-color: blue;
   }
 }
-@media screen and (min-width: 61em) {
+@media screen and (min-width: 64.615em) {
   /* line 27, ../sass/style.scss */
   #main-content {
     background-color: purple;
