New Breakpoints variable for respond-to madness!

--- a/sass/aura/_variables.scss
+++ b/sass/aura/_variables.scss
@@ -15,6 +15,7 @@ $alphabet-count:        26                          !default;
 $measure-width:         $alphabet-count* $fourth    !default;
 $lh-addition:           .3em                        !default;
 $responsive-ratio:      false                       !default;
+$breakpoints:           false                       !default;
 // If using font-scale, suggest $major-third ratio. If not, suggest $golden ratio
 // Bad Options
 $width:                 false                       !default;
@@ -25,7 +26,7 @@ $width:                 false                       !default;
 //////////////////////////////
 $measure:                 false                           !default;
 $gutter-col-total:        5                               !default;
-$breakpoints:             false                           !default;
+$aura-breakpoints:        false                           !default;
 $body-font-size-em:       false                           !default;
 $body-font-size-px:       false                           !default;
 $body-font-size-percent:  false                           !default;
