--- a/sass/aura/_mixins.scss
+++ b/sass/aura/_mixins.scss
@@ -33,6 +33,7 @@
   // Set up sidebars now as sidebars can affect $total-cols
   %primary-sidebar {
     @include columns($total-cols, $total-cols);
+    margin-left: gutter();
     
     // Single column debugging for mobile-first design!
     @if $single-column == false {
@@ -74,6 +75,7 @@
   
   %secondary-sidebar {
     @include columns($total-cols, $total-cols);
+    margin-left: gutter();
     
     // Single column debugging for mobile-first design!
     @if $single-column == false {
@@ -245,23 +247,107 @@ $modular-scale-loaded: false !default;
 // Aurora Respond-To
 //////////////////////////////
 @mixin respond-to($context) {
-  @if $font-scale and not $breakpoints {
-    $breakpoints: responsive-scale();
+  @if $font-scale and not $aura-breakpoints {
+    $aura-breakpoints: responsive-scale();
   }
-  @else if not $font-scale and not $breakpoints {
-    $breakpoints: responsive-ratio();
+  @else if not $font-scale and not $aura-breakpoints {
+    $aura-breakpoints: responsive-ratio();
   }
   $i: 1 !default;
   @each $size in $sizes {
     @if $context == $size {
-      $respond: nth($breakpoints, $i);
-      @media screen and (min-width: $respond) {
+      $respond: nth($aura-breakpoints, $i);
+      @include media-query($respond) {
         @content;
       }
     }
     $i: $i + 1;
   }
-  @if $modular-scale-loaded == false {
-    @warn 'the font-scale mixin requires modular-scale to be loaded.';
+  
+  // Special case for Breakpoint Length equal to 2, 3, or 4
+  @if length($breakpoints) >= 2 and length($breakpoints) <= 4 {
+    // Check to see if the 2nd item is a number. If it is, we've got a single query
+    @if type-of(nth($breakpoints, 2)) == 'number' {
+      // Check to see if the context matches the breakpoint namespace
+      @if $context == nth($breakpoints, 1) {
+        // Call Media Query Generator
+        @include media-query-gen($breakpoints) {
+          @content;
+        }
+      }
+    }
+    // Else, loop over all of them
+    @else {
+      // Loop over each breakpoint and check context
+      @each $bkpt in $breakpoints {
+        // If context is correct…
+        @if $context == nth($bkpt, 1) {
+          // Call the generator!
+          @include media-query-gen($bkpt) {
+            @content;
+          }
+        }
+      }
+    }
+  }
+  // Else, loop over all of them
+  @else {
+    // Loop over each breakpoint and check context
+    @each $bkpt in $breakpoints {
+      // If context is correct…
+      @if $context == nth($bkpt, 1) {
+        // Call the generator!
+        @include media-query-gen($bkpt) {
+          @content;
+        }
+      }
+    }
+  }
+}
+
+@mixin media-query-gen($bpt) {
+  // Get length of breakpoint variable, minus the namespace
+  $length: length($bpt);
+  // Go through all of the breakpoint items, starting at the second, and add them to a variable to be passed into the media query mixin
+  $mq: false !default;
+  @for $i from 2 through $length {
+    // If it's the first item, override $mq
+    @if $i == 2 {
+      $mq: nth($bpt, $i);
+    }
+    // Else, join $mq
+    @else {
+      $mq: join($mq, nth($bpt, $i));
+    }
+  }
+  // Call Media Query mixin
+  @include media-query($mq) {
+    @content;
+  }
+}
+
+//////////////////////////////
+// Generalized Media Query Mixin
+//////////////////////////////
+@mixin media-query($value, $operator: 'min-width', $query: 'screen') {
+  // If a list is passed in for value, break it into value, operator, and query
+  @if type-of($value) == 'list' {
+    $mq: $value;
+    
+    @for $i from 1 through length($mq) {
+      @if $i == 1 {
+        $value: nth($mq, 1);
+      }
+      @else if $i == 2 {
+        $operator: nth($mq, 2);
+      }
+      @else if $i == 3 {
+        $query: nth($mq, 3);
+      }
+    }
+  }
+  
+  @media #{$query} and (#{$operator}: #{$value}) {
+    @content;
   }
 }
