--- a/compass/stylesheets/aura/_mixins.scss
+++ b/compass/stylesheets/aura/_mixins.scss
@@ -32,68 +32,87 @@
   
   // Set up sidebars now as sidebars can affect $total-cols
   %primary-sidebar {
-    @include columns(sidebar-width());
-
-    @if nth($sidebars, 2) == 'left' or nth($sidebars, 2) == 'both'{
-      float: none;
+    @include columns($total-cols, $total-cols);
+    margin-left: gutter();
+    
+    // Single column debugging for mobile-first design!
+    @if $single-column == false {
       @include respond-to('small') {
-        @include alpha();
-        float: left;
+        @include columns(sidebar-width());
       }
-    }
-    @else if nth($sidebars, 2) == 'right' {
-      float: none;
-      @include respond-to('small') {
-        float: left;
-        @if nth($sidebars, 1) == 1 {
-          margin-left: 0;
-          margin-right: gutter();
+      
+      @if nth($sidebars, 2) == 'left' or nth($sidebars, 2) == 'both'{
+        float: none;
+        @include respond-to('small') {
+          @include alpha();
+          float: left;
         }
       }
-    }
-    @else if nth($sidebars, 2) == 'none' {
-      float: none;
-      @include respond-to('small') {
-        float: right;
+      @else if nth($sidebars, 2) == 'right' {
+        float: none;
+        @include respond-to('small') {
+          float: left;
+          @if nth($sidebars, 1) == 1 {
+            margin-left: 0;
+            margin-right: gutter();
+          }
+        }
+      }
+      @else if nth($sidebars, 2) == 'none' {
+        float: none;
+        @include respond-to('small') {
+          float: right;
+        }
+      }
+      @else {
+        @warn 'Sidebar side can only have a value of left, right, both, or none';
       }
     }
     @else {
-      @warn 'Sidebar side can only have a value of left, right, both, or none';
+      float: none;
     }
   }
   
   %secondary-sidebar {
-    @include columns(sidebar-width($overflow: false));
-
-    @if nth($sidebars, 2) == 'left' {
-      float: none;
+    @include columns($total-cols, $total-cols);
+    margin-left: gutter();
+    
+    // Single column debugging for mobile-first design!
+    @if $single-column == false {
       @include respond-to('small') {
-        float: left;
+        @include columns(sidebar-width($overflow: false));
       }
-    }
-    @else if nth($sidebars, 2) == 'right' {
-      float: none;
-      @include respond-to('small') {
-        float: right;
-        margin-left: 0;
-        margin-right: gutter();
+      
+      @if nth($sidebars, 2) == 'left' {
+        float: none;
+        @include respond-to('small') {
+          float: left;
+        }
       }
-    }
-    @else if nth($sidebars, 2) == 'both' {
-      float: none;
-      @include respond-to('small') {
-        float: right;
-        margin-right: -1 * (columns($main-content-cols) + columns(sidebar-width($overflow: false)) + gutter());
+      @else if nth($sidebars, 2) == 'right' {
+        float: none;
+        @include respond-to('small') {
+          float: right;
+          margin-left: 0;
+          margin-right: gutter();
+        }
       }
-    }
-    @else if nth($sidebars, 2) == 'none' {
-      float: none;
-      @include respond-to('small') {
-        float: right;
+      @else if nth($sidebars, 2) == 'both' {
+        float: none;
+        @include respond-to('small') {
+          float: right;
+          margin-right: -1 * (columns($main-content-cols) + columns(sidebar-width($overflow: false)) + gutter());
+        }
       }
-    }
-    @else {
-      @warn 'Sidebar side can only have a value of left, right, both, or none';
+      @else if nth($sidebars, 2) == 'none' {
+        float: none;
+        @include respond-to('small') {
+          float: right;
+        }
+      }
+      @else {
+        @warn 'Sidebar side can only have a value of left, right, both, or none';
+      }
     }
   }
   
@@ -122,19 +141,22 @@
       // Set base Root Font to -2 Modular Scale
       @include font-scale(-2);
       
-      // At Small Responsive Scale, increase Modular Scale by 1
-      @include respond-to('small') {
-        @include font-scale(-1);
-      }
-      @include respond-to('medium') {
-        @include font-scale(0);
-      }
-      // At Large Responsive Scale, increase Modular Scale by 2 to base
-      @include respond-to('large') {
-        @include font-scale(1);
-      }
-      @include respond-to('full') {
-        @include font-scale(2);
+      // Single column debugging for mobile-first design!
+      @if $single-column == false {
+        // At Small Responsive Scale, increase Modular Scale by 1
+        @include respond-to('small') {
+          @include font-scale(-1);
+        }
+        @include respond-to('medium') {
+          @include font-scale(0);
+        }
+        // At Large Responsive Scale, increase Modular Scale by 2 to base
+        @include respond-to('large') {
+          @include font-scale(1);
+        }
+        @include respond-to('full') {
+          @include font-scale(2);
+        }
       }
     }
     // If Font Scale is disabled, set root font to base font size
@@ -153,47 +175,52 @@
   // Create Measure class to be extended
   %measure {
     @include full;
-    @include respond-to('small') {
-      @include columns($main-content-cols);
-    }
-    @if nth($sidebars, 2) == 'left'{
-      float: none;
+    
+    // Single column debugging for mobile-first design!
+    @if $single-column == false {
       @include respond-to('small') {
-        float: right;
+        @include columns($main-content-cols);
       }
-    }
-    @else if nth($sidebars, 2) == 'both' {
-      float: none;
-      @include respond-to('small') {
-        float: right;
-        @include alpha;
-        margin-left: 0;
-        margin-right: columns(sidebar-width($overflow: false)) + gutter() + gutter();
+      @if nth($sidebars, 2) == 'left'{
+        float: none;
+        @include respond-to('small') {
+          float: right;
+        }
       }
-    }
-    @else if nth($sidebars, 2) == 'right' {
-      float: none;
-      @include respond-to('small') {
-        @include alpha();
-        float: left;
+      @else if nth($sidebars, 2) == 'both' {
+        float: none;
+        @include respond-to('small') {
+          float: right;
+          @include alpha;
+          margin-left: 0;
+          margin-right: columns(sidebar-width($overflow: false)) + gutter() + gutter();
+        }
       }
-    }
-    @else if nth($sidebars, 2) == 'none' {
-      float: none;
-      @include respond-to('small') {
-        @include alpha();
-        float: left;
+      @else if nth($sidebars, 2) == 'right' {
+        float: none;
+        @include respond-to('small') {
+          @include alpha();
+          float: left;
+        }
       }
-    }
-    // Add in "Omega"
-    @if nth($sidebars, 2) == 'left' {
-      @include respond-to('small') {
-        margin-left: 0;
-        margin-right: gutter();
+      @else if nth($sidebars, 2) == 'none' {
+        float: none;
+        @include respond-to('small') {
+          @include alpha();
+          float: left;
+        }
       }
-    }
-    @else {
-      @warn 'Sidebar side can only have a value of left, right, both, or none';
+      @else {
+        @warn 'Sidebar side can only have a value of left, right, both, or none';
+      }
+
+      // Add in "Omega"
+      @if nth($sidebars, 2) == 'left' {
+        @include respond-to('small') {
+          margin-left: 0;
+          margin-right: gutter();
+        }
+      }
     }
   }
   
@@ -220,23 +247,107 @@ $modular-scale-loaded: false !default;
 // Aurora Respond-To
 //////////////////////////////
 @mixin respond-to($context) {
-  @if $font-scale and not $breakpoints {
-    $breakpoints: responsive-scale();
+  @if $font-scale and not $aura-breakpoints {
+    $aura-breakpoints: responsive-scale();
   }
-  @else if not $font-scale and not $breakpoints {
-    $breakpoints: responsive-ratio();
+  @else if not $font-scale and not $aura-breakpoints {
+    $aura-breakpoints: responsive-ratio();
   }
   $i: 1 !default;
   @each $size in $sizes {
     @if $context == $size {
-      $respond: nth($breakpoints, $i);
-      @media screen and (min-width: $respond) {
+      $respond: nth($aura-breakpoints, $i);
+      @include media-query($respond) {
         @content;
       }
     }
     $i: $i + 1;
   }
-  @if $modular-scale-loaded == false {
-    @warn 'the font-scale mixin requires modular-scale to be loaded.';
+  
+  // Special case for Breakpoint Length equal to 2, 3, or 4
+  @if length($breakpoints) >= 2 and length($breakpoints) <= 4 {
+    // Check to see if the 2nd item is a number. If it is, we've got a single query
+    @if type-of(nth($breakpoints, 2)) == 'number' {
+      // Check to see if the context matches the breakpoint namespace
+      @if $context == nth($breakpoints, 1) {
+        // Call Media Query Generator
+        @include media-query-gen($breakpoints) {
+          @content;
+        }
+      }
+    }
+    // Else, loop over all of them
+    @else {
+      // Loop over each breakpoint and check context
+      @each $bkpt in $breakpoints {
+        // If context is correct…
+        @if $context == nth($bkpt, 1) {
+          // Call the generator!
+          @include media-query-gen($bkpt) {
+            @content;
+          }
+        }
+      }
+    }
+  }
+  // Else, loop over all of them
+  @else {
+    // Loop over each breakpoint and check context
+    @each $bkpt in $breakpoints {
+      // If context is correct…
+      @if $context == nth($bkpt, 1) {
+        // Call the generator!
+        @include media-query-gen($bkpt) {
+          @content;
+        }
+      }
+    }
+  }
+}
+
+@mixin media-query-gen($bpt) {
+  // Get length of breakpoint variable, minus the namespace
+  $length: length($bpt);
+  // Go through all of the breakpoint items, starting at the second, and add them to a variable to be passed into the media query mixin
+  $mq: false !default;
+  @for $i from 2 through $length {
+    // If it's the first item, override $mq
+    @if $i == 2 {
+      $mq: nth($bpt, $i);
+    }
+    // Else, join $mq
+    @else {
+      $mq: join($mq, nth($bpt, $i));
+    }
+  }
+  // Call Media Query mixin
+  @include media-query($mq) {
+    @content;
+  }
+}
+
+//////////////////////////////
+// Generalized Media Query Mixin
+//////////////////////////////
+@mixin media-query($value, $operator: 'min-width', $query: 'screen') {
+  // If a list is passed in for value, break it into value, operator, and query
+  @if type-of($value) == 'list' {
+    $mq: $value;
+    
+    @for $i from 1 through length($mq) {
+      @if $i == 1 {
+        $value: nth($mq, 1);
+      }
+      @else if $i == 2 {
+        $operator: nth($mq, 2);
+      }
+      @else if $i == 3 {
+        $query: nth($mq, 3);
+      }
+    }
+  }
+  
+  @media #{$query} and (#{$operator}: #{$value}) {
+    @content;
   }
 }
